--- a/action.yaml
+++ b/action.yaml
@@ -12,3 +12,5 @@ runs:
   image: docker://ghcr.io/spotdemo4/nix-flake-release:0.1.0
   env:
     GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+    GITHUB_ACTOR: ${{ github.actor }}
+    GITHUB_REPOSITORY: ${{ github.repository }}
