fix: checkout before release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,8 @@ jobs:
     needs: check
     runs-on: ubuntu-24.04
     steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
       - name: Release
         uses: spotdemo4/nix-flake-release@f32b31efdf4f47274d599619ef2d3cdabf0aaaa8 # v0.1.0
         with:
