fix: add GITHUB_TOKEN back in

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,3 +28,5 @@ jobs:
 
       - name: Release
         uses: spotdemo4/nix-flake-release@c956b003879129cc6009b17b3b019bc6d55872eb # v0.2.4
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
