fix(ci): reduce check perms

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -11,8 +11,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
 
 permissions:
-  contents: write
-  packages: write
+  contents: read
 
 jobs:
   check:
