feat: conditional bundle

--- a/action.yaml
+++ b/action.yaml
@@ -23,6 +23,11 @@ inputs:
     required: false
     default: ${{ github.token }}
 
+  bundle:
+    description: whether to bundle nix derivations before archiving
+    required: false
+    default: true
+
 runs:
   using: docker
   image: docker://ghcr.io/spotdemo4/nix-flake-release:0.4.6
@@ -31,3 +36,4 @@ runs:
     REGISTRY: ${{ inputs.registry }}
     REGISTRY_USERNAME: ${{ inputs.registry_username }}
     REGISTRY_PASSWORD: ${{ inputs.registry_password }}
+    BUNDLE: ${{ inputs.bundle }}
