feat: gitea release

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,7 +11,8 @@
   "extends": ["config:recommended"],
   "lockFileMaintenance": {
     "enabled": true,
-    "automerge": true
+    "automerge": true,
+    "schedule": ["* * * * 0"] // sunday
   },
   "nix": {
     "enabled": true
