fix: only bundle unless absolutely necessary

--- a/action.yaml
+++ b/action.yaml
@@ -31,7 +31,7 @@ inputs:
   bundle:
     description: whether to bundle nix derivations before archiving
     required: false
-    default: "true"
+    default: "false"
 
 runs:
   using: docker
