chore: add id-token

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,16 +19,16 @@
   },
   "packageRules": [
     {
-      "automerge": true,
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"]
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
     },
     {
-      "groupName": "nix inputs",
-      "matchManagers": ["nix"]
+      "matchManagers": ["nix"],
+      "groupName": "nix inputs"
     },
     {
-      "groupName": "github actions",
-      "matchManagers": ["github-actions"]
+      "matchManagers": ["github-actions"],
+      "groupName": "github actions"
     }
   ]
 }
