--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,10 +12,11 @@ concurrency:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   check:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Initialize
         uses: spotdemo4/nix-init@b3297f8312873ecb1f56efc86777c7a164c16e70 # v1.25.0
