--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -7,10 +7,11 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   renovate:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - id: init
         name: Initialize
