fix: disable image & appimage on darwin

--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -9,7 +9,7 @@ on:
         description: "force"
         required: false
         type: choice
-        default: "true"
+        default: "false"
         options:
           - "true"
           - "false"
