--- a/action.yaml
+++ b/action.yaml
@@ -7,8 +7,8 @@ inputs:
     description: nix packages to release
     required: false
 
-  github_type:
-    description: type of github server (github, gitea, forgejo)
+  git_type:
+    description: type of git server (github, gitea, forgejo)
     required: false
 
   github_repository:
@@ -55,7 +55,7 @@ runs:
   image: docker://ghcr.io/spotdemo4/nix-flake-release:0.11.3
   env:
     ENV_ARGS: ${{ inputs.packages }}
-    GITHUB_TYPE: ${{ inputs.github_type }}
+    GIT_TYPE: ${{ inputs.git_type }}
     GITHUB_REPOSITORY: ${{ inputs.github_repository }}
     GITHUB_SERVER_URL: ${{ inputs.github_server_url }}
     GITHUB_ACTOR: ${{ inputs.github_actor }}
