--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,11 +16,11 @@ permissions:
 jobs:
   release:
     strategy:
-      fail-fast: false
       matrix:
         image:
           - ubuntu-24.04
           - ubuntu-24.04-arm
+      fail-fast: false
     runs-on: ${{ matrix.image }}
     steps:
       - id: init
@@ -32,10 +32,16 @@ jobs:
           fetch_depth: 0
           shell: release
 
-      - name: Run flake-release
+      - name: Publish to GitHub
         run: flake-release
         env:
           GITHUB_TOKEN: ${{ steps.init.outputs.token }}
           REGISTRY: ghcr.io
           REGISTRY_USERNAME: ${{ github.actor }}
           REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish to FlakeHub
+        if: matrix.image == 'ubuntu-24.04'
+        uses: DeterminateSystems/flakehub-push@71f57208810a5d299fc6545350981de98fdbc860 # v6
+        with:
+          visibility: public
