--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,16 +40,21 @@ jobs:
           REGISTRY_USERNAME: ${{ github.actor }}
           REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Publish to GitHub (script)
+        if: matrix.image == 'ubuntu-24.04'
+        env:
+          GH_TOKEN: ${{ steps.init.outputs.token }}
+        run: |
+          # Publishing bash script
+
+          echo "Inlining sources"
+          ./.github/inline.sh ./src/flake-release.sh > flake-release.sh
+
+          echo "Uploading to GitHub"
+          gh release upload "$(git describe --tags --abbrev=0)" flake-release.sh
+
       - name: Publish to FlakeHub
         if: matrix.image == 'ubuntu-24.04'
         uses: DeterminateSystems/flakehub-push@71f57208810a5d299fc6545350981de98fdbc860 # v6
         with:
           visibility: public
-
-      - name: Publish script
-        if: matrix.image == 'ubuntu-24.04'
-        env:
-          GH_TOKEN: ${{ steps.init.outputs.token }}
-        run: |
-          ./.github/inline.sh ./src/flake-release.sh > flake-release.sh
-          gh release upload "$(git describe --tags --abbrev=0)" flake-release.sh
